--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 2.8 )
-project( get_depth )
+project( main )
 
 set( CMAKE_BUILD_TYPE Release )
 set( CMAKE_CXX_FLAGS "-std=c++11 -O3" )
@@ -14,5 +14,5 @@ FIND_PACKAGE( PCL REQUIRED COMPONENTS common io visualization filters )
 include_directories( ${PCL_INCLUDE_DIRS} )
 add_definitions( ${PCL_DEFINITIONS} )
 
-add_executable( get_depth  get_depth.cpp )
-target_link_libraries( get_depth ${OpenCV_LIBS} ${PCL_LIBRARIES} )
+add_executable( main  main.cpp )
+target_link_libraries( main ${OpenCV_LIBS} ${PCL_LIBRARIES} )
